--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -17,3 +17,11 @@ html, body {
     padding: 0 15px;
     margin: 0 auto;
 }
+
+.none {
+    display: none !important;
+}
+
+body {
+    padding-bottom: 50vh;
+}
