--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -23,9 +23,11 @@
 
 		&-title {
 			font-size: 80px;
+            // font-size: 5.7vw;
 			font-weight: 400;
 			line-height: 130%;
 			text-align: center;
+            max-width: 861px;
 			text-transform: capitalize;
 			margin-bottom: 14px;
 		}
@@ -81,7 +83,7 @@
     &__dot-sofa {
         position: absolute;
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
         align-items: center;
         justify-content: space-between;
 
@@ -93,20 +95,41 @@
 
     &__dot-vase {
         position: absolute;
-        left: calc(114 * 100% /1440);
-        top: calc(743 * 100% /1084);
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: space-between;
+
+        width: 112px;
+        height: 137px;
+        left: calc(75 * 100% /1440);
+        top: calc(620 * 100% /1084);
     }
 
     &__dot-item {
         position: absolute;
-        left: calc(800 * 100% /1440);
-        top: calc(777 * 100% /1084);
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: space-between;
+
+        width: 112px;
+        height: 137px;
+        left: calc(753 * 100% /1440);
+        top: calc(660 * 100% /1084);
     }
 
     &__dot-wall {
         position: absolute;
-        right: calc(40 * 100% /1440);
-        top: calc(815 * 100% /1084);
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: space-between;
+
+        width: 112px;
+        height: 137px;
+        right: calc(5 * 100% /1440);
+        top: calc(710 * 100% /1084);
     }
 
 
