--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -16,7 +16,13 @@ html, body {
     max-width: 1210px;
     padding: 0 15px;
     margin: 0 auto;
+
+    &--small {
+        max-width: 1094px;
+
+    }
 }
+
 
 .none {
     display: none !important;
