--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -39,6 +39,10 @@
             z-index: 3;
 			color: var(--text-muted);
 			font-size: 16px;
+
+            &:hover {
+                opacity: 0.8;
+            }
 		}
 
 		&-title {
