--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -82,54 +82,54 @@
 
     &__dot-sofa {
         position: absolute;
-        display: flex;
-        flex-direction: column-reverse;
-        align-items: center;
-        justify-content: space-between;
+        // display: flex;
+        // flex-direction: column-reverse;
+        // align-items: center;
+        // justify-content: space-between;
 
         width: 112px;
         height: 137px;
-        left: calc(250 * 100% /1440);
-        top: calc(575 * 100% /1084);
+        left: calc(290 * 100% /1440);
+        top: calc(680 * 100% /1084);
     }
 
     &__dot-vase {
         position: absolute;
-        display: flex;
-        flex-direction: column-reverse;
-        align-items: center;
-        justify-content: space-between;
+        // display: flex;
+        // flex-direction: column-reverse;
+        // align-items: center;
+        // justify-content: space-between;
 
         width: 112px;
         height: 137px;
-        left: calc(75 * 100% /1440);
-        top: calc(620 * 100% /1084);
+        left: calc(100 * 100% /1440);
+        top: calc(735 * 100% /1084);
     }
 
     &__dot-item {
         position: absolute;
-        display: flex;
-        flex-direction: column-reverse;
-        align-items: center;
-        justify-content: space-between;
+        // display: flex;
+        // flex-direction: column-reverse;
+        // align-items: center;
+        // justify-content: space-between;
 
         width: 112px;
         height: 137px;
-        left: calc(753 * 100% /1440);
-        top: calc(660 * 100% /1084);
+        left: calc(795 * 100% /1440);
+        top: calc(770 * 100% /1084);
     }
 
     &__dot-wall {
         position: absolute;
-        display: flex;
-        flex-direction: column-reverse;
-        align-items: center;
-        justify-content: space-between;
+        // display: flex;
+        // flex-direction: column-reverse;
+        // align-items: center;
+        // justify-content: space-between;
 
         width: 112px;
         height: 137px;
-        right: calc(5 * 100% /1440);
-        top: calc(710 * 100% /1084);
+        left: calc(1370 * 100% /1440);
+        top: calc(810 * 100% /1084);
     }
 
 
