--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -23,11 +23,12 @@
 
 		&-title {
 			font-size: 80px;
-            // font-size: 5.7vw;
+            //font-size: 5.1vw;
 			font-weight: 400;
 			line-height: 130%;
 			text-align: center;
             max-width: 861px;
+            //width: 77%;
 			text-transform: capitalize;
 			margin-bottom: 14px;
 		}
@@ -47,6 +48,7 @@
 			height: 56px;
 
 			display: flex;
+            gap: 15px;
 			flex-direction: row;
 			justify-content: space-between;
 			align-items: center;
@@ -64,6 +66,7 @@
 				font-size: 18px;
 				font-weight: 500;
 				line-height: 150%;
+                flex-grow: 1;
 
                 &::placeholder {
                     color: rgb(255, 255, 255);
@@ -76,16 +79,13 @@
                 height: 40px;
                 border-radius: 24px;
                 background-color: var(--accent);
+                flex-shrink: 0;
 			}
 		}
 	}
 
     &__dot-sofa {
         position: absolute;
-        // display: flex;
-        // flex-direction: column-reverse;
-        // align-items: center;
-        // justify-content: space-between;
 
         width: 112px;
         height: 137px;
@@ -95,10 +95,6 @@
 
     &__dot-vase {
         position: absolute;
-        // display: flex;
-        // flex-direction: column-reverse;
-        // align-items: center;
-        // justify-content: space-between;
 
         width: 112px;
         height: 137px;
@@ -108,10 +104,6 @@
 
     &__dot-item {
         position: absolute;
-        // display: flex;
-        // flex-direction: column-reverse;
-        // align-items: center;
-        // justify-content: space-between;
 
         width: 112px;
         height: 137px;
@@ -121,10 +113,6 @@
 
     &__dot-wall {
         position: absolute;
-        // display: flex;
-        // flex-direction: column-reverse;
-        // align-items: center;
-        // justify-content: space-between;
 
         width: 112px;
         height: 137px;
