--- a/src/scss/blocks/_nav.scss
+++ b/src/scss/blocks/_nav.scss
@@ -12,11 +12,35 @@
 		gap: 65px;
 
 		&-item {
-			
+			position: relative;
 			font-size: 18px;
 			font-weight: 400;
 			text-align: center;
 		}
+
+        &-link {
+            display: flex;
+            gap: 8px;
+            align-items: center;
+
+            transition: opacity 0.2s ease-in;
+
+            &:hover {
+                opacity: 0.7;
+            }
+
+            &--dropdown {
+
+                &::after {
+                    content: url('./../img/icons/arrow-down.svg');
+                    height: 18px;
+    
+                }
+
+            }
+
+
+        }
 	}
 
 	&__cart {
