--- a/src/scss/blocks/_tab-controls.scss
+++ b/src/scss/blocks/_tab-controls.scss
@@ -26,6 +26,10 @@
 
         &--active {
             background-color: rgb(255, 255, 255);
+            
+            &:hover {
+                background-color: rgb(255, 255, 255);
+            }
         }
 	}
 }
